--- a/.github/workflows/Lab03.yml
+++ b/.github/workflows/Lab03.yml
@@ -15,7 +15,7 @@ on:
 #
 # 2. Change these variables for your configuration:
 env:
-  AZURE_WEBAPP_NAME: Lab03    # set this to your application's name
+  AZURE_WEBAPP_NAME: 03-Lab    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '5.0.101'           # set this to the dot net version to use
 
